crates/testing/proc_macros/tests/ui/fail/safe_tests_has_too_many_args.stderr
error: custom attribute panicked
 --> tests/ui/fail/safe_tests_has_too_many_args.rs:5:1
  |
5 | #[safe_tests(a, b)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `"a, b"` is not a valid identifier
